--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,9 +4,9 @@
   url: /
 - title: Work experience
   url: /#experience
-- title: Certifications/Projects
-  url: /#certifications-and-projects
-- title: Skills
-  url: /#skills
+- title: Education
+  url: /#education
+- title: Competencies
+  url: /#competencies
 - title: github
   url: https://github.com/lindawn
